<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center|top"
    tools:context=".MainActivity"
    android:padding="16dp">

    <TextView
        android:id="@+id/result_tv"
        android:textSize="48sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        />
    <EditText
        android:id="@+id/first_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:hint="First Num"
        />
    <EditText
        android:id="@+id/second_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:hint="Second Num"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ADD"
        android:textSize="30sp"
        android:id="@+id/add_btn"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Divide"
        android:textSize="30sp"
        android:id="@+id/divide_btn"
        />
</LinearLayout>